fix scrollbar and button style

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,22 +6,25 @@ body {
   &::-webkit-scrollbar-track
   {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 5px;
+    background-color: #F5F5F5;
+    border-radius: 10px;
   }
 
   &::-webkit-scrollbar
   {
-    width: 10px;
-    height: 100%;
-    cursor: pointer;
+    width: 8px;
+    background-color: #F5F5F5;
   }
 
   &::-webkit-scrollbar-thumb
   {
     border-radius: 10px;
-    background-image: url("../calculator-icon.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
+    background-image: -webkit-gradient(linear,
+            left bottom,
+            left top,
+            color-stop(0.44, #D9E4E6),
+            color-stop(0.72, #167F92),
+            color-stop(0.86, #024457));
   }
 }
 .page-title {
@@ -378,7 +381,6 @@ h1 {
     background-size: 100%;
     &:after {
       width: 100%;
-      margin-left: 14px;
     }
   }
 }
